import se.bjurr.gitchangelog.plugin.gradle.GitChangelogTask

plugins {
    id "se.bjurr.gitchangelog.git-changelog-gradle-plugin" version "1.79.0"
    id "io.github.gradle-nexus.publish-plugin" version "2.0.0-rc-1"
    id "org.sonarqube" version "3.3"
}

allprojects {
    apply plugin: 'java'
    apply plugin: 'maven-publish'
    apply plugin: 'jacoco'
    apply plugin: 'signing'

    sourceCompatibility = 17
    targetCompatibility = 17

    repositories {
        mavenLocal()
        mavenCentral()
    }
}

group 'ru.keepupproject.plugins'
version '2.0.0'

subprojects {
    java {
        withJavadocJar()
        withSourcesJar()
    }

    group 'ru.keepupproject'
    version '2.0.0'
}

dependencies {
    compileClasspath "se.bjurr.gitchangelog:git-changelog-gradle-plugin:1.71.4"
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
}

test {
    testLogging.showStandardStreams = true
    useJUnitPlatform()
    finalizedBy jacocoTestReport
}

subprojects {
    test.useTestNG()
    sonarqube {
        properties {
            property "sonar.projectKey", "FedorSergeev_keepup"
            property "sonar.organization", "fedorsergeev"
            property "sonar.host.url", "https://sonarcloud.io"
            property "sonar.coverage.jacoco.xmlReportPaths", "../build/reports/jacoco.xml"
        }
    }
}

task codeCoverageReport(type: JacocoReport) {
    executionData fileTree(project.rootDir.absolutePath).include("**/build/jacoco/*.exec")

    subprojects.each {
        sourceSets it.sourceSets.main
    }

    reports {
        xml.enabled true
        xml.destination file("${buildDir}/reports/jacoco.xml")
        html.enabled true
        csv.enabled false
    }
}

task generateGitChangelogInlineTemplate(type: GitChangelogTask) {
    prependToFile = false; // false will replace the file, true will prepend content
    fromRepo = file("$projectDir")
    fromRef = "2.0.0-beta.2";
    toRef = "v.2.0.0";
    file = new File("CHANGELOG.md")
    templateContent = """
                        # Changelog
                        Changelog
                        {{#tags}}
                        ## {{name}}
                         {{#issues}}
                          {{#hasLink}}
                        ### {{name}} [{{issue}}]({{link}}) {{title}}
                          {{/hasLink}}
                          {{^hasLink}}
                        ### {{name}}
                          {{/hasLink}}
                          {{#commits}}
                        [{{hash}}](https://github.com/FedorSergeev/keepup/commit/{{hash}}) {{authorName}} *{{commitTime}}*
                        {{{message}}}
                          {{/commits}}
                         {{/issues}}
                        {{/tags}}
                      """
}

codeCoverageReport.dependsOn {
    subprojects*.test
}

sonarqube {
    properties {
        property "sonar.projectKey", "FedorSergeev_keepup"
        property "sonar.organization", "fedorsergeev"
        property "sonar.host.url", "https://sonarcloud.io"
    }
}